	into a separate file.
	* doc/gramps-manual/C/cmdline.xml: Likewise.
	* doc/gramps-manual/C/getstart.xml: Likewise.
	* doc/gramps-manual/C/mainwin.xml: Likewise.
	* doc/gramps-manual/C/usage.xml: Likewise.
	* doc/gramps-manual/C/custom.xml: Likewise.
	* doc/gramps-manual/C/Makefile.am: Ship new files. 
	* doc/gramps-manual/C/Makefile.in: Likewise. 

2003-09-21  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/book.glade: Minor improvements to the dialogs. 
	* doc/gramps-manual/C/gramps-manual.xml: Update manual.

2003-09-21  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddrEdit.py: Fixed OK button callback

2003-09-20  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: pass list of filtered people to find dialog
	* src/Find.py: pass list of filtered people to find dialog
	* src/po/hu.po: set character set to ISO-8859-2, fix typo
	* src/Date.py: Reset date if a empty text string is passed

2003-09-20  Egyeki Gergely  <egeri@elte.hu>
	* src/po/hu.po: Hungarian translation
	
2003-09-19  Don Allingham  <dallingham@users.sourceforge.net>
	* src/po/Makefile.am: added support for building zh_CN.mo

2003-09-19  Xing Wang  <wangx@udel.edu>
	* src/po/zh_CN.po: Partial Simplified Chinese translation

2003-09-19  Tim Waugh  <twaugh@redhat.com>
	* gramps.spec.in: Own %{_datadir}/gramps directory.
	* src/Makefile.am: Fix build when builddir != srcdir.
	* gramps.spec.in: Ship grampslib.so.

2003-09-18  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Makefile.am: Install grampslib under $pkglibdir/$PACKAGE
	* src/Makefile.in: Likewise. 
	* gramps.sh.in: Add $pkglibdir/$PACKAGE to the $PYTHONPATH. 
	* src/po/template.po: Update translation template. 

2003-09-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/ReadGedcom.py: Handle Legacy's method of
	handling separations and divorces

2003-09-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/OpenOfficeDoc.py: set z-index properly for paths