@@ -10,6 +10,7 @@
 	* doc/gramps-manual/C/custom.xml: Likewise.
 	* doc/gramps-manual/C/Makefile.am: Ship new files. 
 	* doc/gramps-manual/C/Makefile.in: Likewise. 
+	* src/latin_utf8.py (latin_to_utf8): Convert to unicode only if needed. 
 
 2003-09-21  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/plugins/book.glade: Minor improvements to the dialogs. 
